--- a/Demo.html
+++ b/Demo.html
@@ -20,7 +20,7 @@
         <label for="birthDate">Введите дату рождения</label>
         <input type="date" placeholder="Дата рождения пользователя" id="birthDate" name="birthDate" />
         <label for="color">Выберите цвет</label>
-        <!-- <input type="color" id="color" name="color" /> -->
+        <input type="color" id="color" name="color" />
         <button type="submit">Кнопка</button>
     </form>
     <button>Кнопка вне формы</button>
