--- a/Demo.html
+++ b/Demo.html
@@ -15,7 +15,7 @@
             <label for="email">Введите email</label>
             <input type="email" placeholder="Email пользователя" id="email" name="email" value="no@email.ru" />
         </div>
-        <label for="password">Введите пароль</label>
+        <!-- <label for="password">Введите пароль</label> -->
         <input type="password" placeholder="Пароль" id="password" name="password" />
         <label for="birthDate">Введите дату рождения</label>
         <input type="date" placeholder="Дата рождения пользователя" id="birthDate" name="birthDate" />
