--- a/contacts_form.html
+++ b/contacts_form.html
@@ -23,6 +23,7 @@
             <div>
                 <label for="topic">Тема*</label>
                 <select name="topic" id="topic" required>
+                    <option value="" disabled selected>Выберите тему</option>
                     <option value="courses">Приобретение курсов</option>
                     <option value="feedback">Обратная связь</option>
                 </select>
