--- a/Miro/index.html
+++ b/Miro/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="Styles/style.css">
+    <title>Miro</title>
 </head>
 
 <body>
@@ -23,7 +24,10 @@
         <section>
             <h1>Место для командной работы</h1>
             <p>Интерактивная онлайн-доска для совместной работы команд — в любое время, в любом месте.</p>
-            <form action="/register" method="get"></form>
+            <form action="/register" method="get">
+                <input type="email" name="email" id="email">
+                <button id="heroButton">Начать бесплатно</button>
+            </form>
             <img src="./images/hero1.png" alt="Изображение экрана работы Miro">
         </section>
         <section>
