--- a/Miro/index.html
+++ b/Miro/index.html
@@ -12,11 +12,11 @@
     <header>
         <nav>
             <ul>
-                <li>Продукт</li>
-                <li>Решения</li>
-                <li>Ресурсы</li>
-                <li>Предприятия</li>
-                <li>Тарифы</li>
+                <li><a href="#">Продукт</a></li>
+                <li><a href="#">Решения</a></li>
+                <li><a href="#">Ресурсы</a></li>
+                <li><a href="#">Предприятия</a></li>
+                <li><a href="#">Тарифы</a></li>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,7 @@
             <p>Работая в офисе, удалённо или в гибридном формате, с Miro ваша команда может общаться, сотрудничать и
                 совместно
                 заниматься творчеством в одном пространстве, из любой точки мира.</p>
-            <a href="#">Узнать больше</a>
+            <a href="#" class="link">Узнать больше</a>
             <img src="./images/hero2.png" alt="Работа в Miro с мобильных устройств">
         </section>
         <section>
@@ -45,39 +45,7 @@
         <p>Редактируете ли вы документы в Google Docs, работаете над задачами в Jira или созваниваетесь в Zoom, Miro
             предлагает
             более 100 интеграций с уже известными и полюбившимися вам инструментами.</p>
-        <a href="#">Узнать больше</a>
-        </section>
-        <section>
-            <table>
-                <caption>Структура расходов</caption>
-                <thead>
-                    <tr>
-                        <th rowspan="2">Статья</th>
-                        <th colspan="2">Сумма</th>
-                    </tr>
-                    <tr>
-                        <th>Руб</th>
-                        <th>$</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Зарплата</td>
-                        <td>100 000</td>
-                        <td>2000</td>
-                    </tr>
-                    <tr>
-                        <td>Сервисы</td>
-                        <td>30 000</td>
-                        <td>700</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Итог</td>
-                    <td>130 000</td>
-                    <td>2700</td>
-                </tfoot>
-            </table>
+        <a href="#" class="link">Узнать больше</a>
         </section>
     </main>
     <footer>
