--- a/Miro/index.html
+++ b/Miro/index.html
@@ -23,7 +23,8 @@
     <main>
         <section>
             <h1>Место для командной работы</h1>
-            <p>Интерактивная онлайн-доска для совместной работы команд — в любое время, в любом месте.</p>
+            <p class="heroText">Интерактивная онлайн-доска для совместной работы команд — в любое время, в любом месте.
+            </p>
             <form action="/register" method="get">
                 <input type="email" name="email" id="email">
                 <button id="heroButton">Начать бесплатно</button>
@@ -32,7 +33,8 @@
         </section>
         <section>
             <h2>Работайте вместе, где бы вы ни находились</h2>
-            <p>Работая в офисе, удалённо или в гибридном формате, с Miro ваша команда может общаться, сотрудничать и
+            <p class="sectionText">Работая в офисе, удалённо или в гибридном формате, с Miro ваша команда может
+                общаться, сотрудничать и
                 совместно
                 заниматься творчеством в одном пространстве, из любой точки мира.</p>
             <a href="#" class="link">Узнать больше</a>
@@ -42,7 +44,8 @@
             <img src="./images/hero3.png" alt="Сервисы вокруг Miro">
         </section>
         <h2>Закройте лишние вкладки — всё уже здесь</h2>
-        <p>Редактируете ли вы документы в Google Docs, работаете над задачами в Jira или созваниваетесь в Zoom, Miro
+        <p class="sectionText">Редактируете ли вы документы в Google Docs, работаете над задачами в Jira или
+            созваниваетесь в Zoom, Miro
             предлагает
             более 100 интеграций с уже известными и полюбившимися вам инструментами.</p>
         <a href="#" class="link">Узнать больше</a>
