--- a/Miro/index.html
+++ b/Miro/index.html
@@ -25,10 +25,11 @@
             <h1>Место для командной работы</h1>
             <p class="heroText">Интерактивная онлайн-доска для совместной работы команд — в любое время, в любом месте.
             </p>
-            <form action="/register" method="get">
+            <form action="/register" method="get" class="heroForm">
                 <input type="email" name="email" id="email">
                 <button id="heroButton">Начать бесплатно</button>
             </form>
+            <p>Всегда бесплатно — кредитная карта не нужна</p>
             <img src="./images/hero1.png" alt="Изображение экрана работы Miro">
         </section>
         <section>
