--- a/Miro/index.html
+++ b/Miro/index.html
@@ -51,6 +51,12 @@
             более 100 интеграций с уже известными и полюбившимися вам инструментами.</p>
         <a href="#" class="link">Узнать больше</a>
         </section>
+        <h2>Создан для всех типов команд</h2>
+        <ul class="sectionList">
+            <li>Создавайте вайрфреймы</li>
+            <li>Подключайте заказчиков к процессу дизайна</li>
+            <li>Проводите вовлекающие дизайн-воркшопы</li>
+        </ul>
     </main>
     <footer>
         <div>&#169;2023 Miro</div>
