--- a/Miro/index.html
+++ b/Miro/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/style.css">
+    <!-- <link rel="stylesheet" href="Styles/another-style.css"> -->
     <title>Miro</title>
 </head>
 
@@ -51,12 +52,15 @@
             более 100 интеграций с уже известными и полюбившимися вам инструментами.</p>
         <a href="#" class="link">Узнать больше</a>
         </section>
-        <h2>Создан для всех типов команд</h2>
-        <ul class="sectionList">
-            <li>Создавайте вайрфреймы</li>
-            <li>Подключайте заказчиков к процессу дизайна</li>
-            <li>Проводите вовлекающие дизайн-воркшопы</li>
-        </ul>
+        <section>
+            <h2>Создан для всех типов команд</h2>
+            <ul class="sectionList">
+                <li>Создавайте вайрфреймы</li>
+                <li>Подключайте заказчиков к процессу дизайна</li>
+                <li>Проводите вовлекающие дизайн-воркшопы</li>
+            </ul>
+            <div class="experimentBlue experimentRed">Экспериментальный div</div>
+        </section>
     </main>
     <footer>
         <div>&#169;2023 Miro</div>
