--- a/Miro/index.html
+++ b/Miro/index.html
@@ -28,7 +28,7 @@
             </p>
             <form action="/register" method="get" class="heroForm">
                 <input type="email" name="email" id="email">
-                <button id="heroButton" class="test test2">Начать бесплатно</button>
+                <button id="heroButton">Начать бесплатно</button>
             </form>
             <p>Всегда бесплатно — кредитная карта не нужна</p>
             <img src="./images/hero1.png" alt="Изображение экрана работы Miro">
@@ -59,7 +59,11 @@
                 <li>Подключайте заказчиков к процессу дизайна</li>
                 <li>Проводите вовлекающие дизайн-воркшопы</li>
             </ul>
-            <div class="experimentBlue experimentRedg" id="exp">Экспериментальный div</div>
+            <div class="experimentBlue experimentRedg" id="exp">Экспериментальный div
+                <label for="test">Test</label>
+                <input type="text" id="test">
+                <button>Test</button>
+            </div>
         </section>
     </main>
     <footer>
