--- a/Miro/index.html
+++ b/Miro/index.html
@@ -58,10 +58,13 @@
                 <li>Подключайте заказчиков к процессу дизайна</li>
                 <li>Проводите вовлекающие дизайн-воркшопы</li>
             </ul>
-            <div class="experimentBlue experimentRedg" id="exp">Экспериментальный div
-                <label for="test">Test</label>
-                <input type="text" id="test">
-                <button>Test</button>
+            <div class="experimentBlue">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repellat cum, vero omnis quia libero ex
+                nemo vel odit laborum enim perferendis, consequuntur adipisci nam. Error rem deserunt hic? Odit!
+            </div>
+            <div class="experimentBlue">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repellat cum, vero omnis quia libero ex
+                nemo vel odit laborum enim perferendis, consequuntur adipisci nam. Error rem deserunt hic? Odit!
             </div>
         </section>
     </main>
