--- a/Miro/index.html
+++ b/Miro/index.html
@@ -58,7 +58,7 @@
                 <li>Подключайте заказчиков к процессу дизайна</li>
                 <li>Проводите вовлекающие дизайн-воркшопы</li>
             </ul>
-            <div class="experimentBlue">
+            <div class="experimentBlue border1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repellat cum, vero omnis quia libero ex
                 nemo vel odit laborum enim perferendis, consequuntur adipisci nam. Error rem deserunt hic? Odit!
             </div>
