--- a/Miro/index.html
+++ b/Miro/index.html
@@ -30,7 +30,7 @@
                 <button id="heroButton">Начать бесплатно</button>
             </form>
             <p>Всегда бесплатно — кредитная карта не нужна</p>
-            <img src="./images/hero1.png" alt="Изображение экрана работы Miro">
+            <img src="./images/hero1.png" alt="Изображение экрана работы Miro" id="heroImage">
         </section>
         <section>
             <h2>Работайте вместе, где бы вы ни находились</h2>
@@ -58,10 +58,11 @@
                 <li>Подключайте заказчиков к процессу дизайна</li>
                 <li>Проводите вовлекающие дизайн-воркшопы</li>
             </ul>
-            <div class="experimentBlue border1">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repellat cum, vero omnis quia libero ex
-                nemo vel odit laborum enim perferendis, consequuntur adipisci nam. Error rem deserunt hic? Odit!
-            </div>
+        </section>
+        <section>
+            <div style="background: red; float: left; width: 100px;">1</div>
+            <div style="background: blue; float: right;width: 100px;">2</div>
+            <div style="background: green;">3</div>
         </section>
     </main>
     <footer>
