--- a/Miro/index.html
+++ b/Miro/index.html
@@ -60,9 +60,19 @@
             </ul>
         </section>
         <section>
-            <div style="background: red; float: left; width: 100px;">1</div>
-            <div style="background: blue; float: right;width: 100px;">2</div>
-            <div style="background: green;">3</div>
+            <div class="divRed">1</div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, quasi ab ipsa culpa ullam ad tempora ipsum
+            labore quae vero! Placeat non a illo sit aliquam deleniti blanditiis, explicabo hic!
+            <div class="divBlue">2</div>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae praesentium nihil eligendi sit facere
+            voluptatem, vitae odio tempora culpa qui nisi magni optio corrupti, voluptatibus repellendus autem suscipit
+            sunt a.
+            <div class="divGreen">3</div>
+        </section>
+        <section>
+            <span class="spanRed">1</span>
+            <span class="spanBlue">2</span>
+            <span class="spanGreen">3</span>
         </section>
     </main>
     <footer>
