--- a/Miro/index.html
+++ b/Miro/index.html
@@ -59,20 +59,30 @@
                 <li>Проводите вовлекающие дизайн-воркшопы</li>
             </ul>
         </section>
-        <section>
-            <div class="divRed">1</div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, quasi ab ipsa culpa ullam ad tempora ipsum
-            labore quae vero! Placeat non a illo sit aliquam deleniti blanditiis, explicabo hic!
-            <div class="divBlue">2</div>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae praesentium nihil eligendi sit facere
-            voluptatem, vitae odio tempora culpa qui nisi magni optio corrupti, voluptatibus repellendus autem suscipit
-            sunt a.
-            <div class="divGreen">3</div>
+        <section class="sticky">
+            <div class="cl1">1</div>
+            <div class="cl2">2</div>
+            <div class="cl3">3</div>
         </section>
-        <section>
-            <span class="spanRed">1</span>
-            <span class="spanBlue">2</span>
-            <span class="spanGreen">3</span>
+        <section class="static">
+            <div class="cl1">1</div>
+            <div class="cl2">2</div>
+            <div class="cl3">3</div>
+        </section>
+        <section class="relative">
+            <div class="cl1">1</div>
+            <div class="cl2">2</div>
+            <div class="cl3">3</div>
+        </section>
+        <section class="absolute">
+            <div class="cl1">1</div>
+            <div class="cl2">2</div>
+            <div class="cl3">3</div>
+        </section>
+        <section class="fixed">
+            <div class="cl1">1</div>
+            <div class="cl2">2</div>
+            <div class="cl3">3</div>
         </section>
     </main>
     <footer>
