--- a/PurpleForm/index.html
+++ b/PurpleForm/index.html
@@ -12,15 +12,18 @@
     <main>
         <h1>Свяжитесь со мной</h1>
         <form action="#">
-            <div>
+            <div class="field">
+                <img src="./images/message.svg" alt="иконка сообщения">
                 <label for="email">E-mail*</label>
                 <input type="email" name="email" id="email" placeholder="Введите E-mail" required>
             </div>
-            <div>
+            <div class="field">
+                <img src="./images/telegram.svg" alt="иконка телеграм">
                 <label for="telegram">Telegram</label>
                 <input type="text" name="telegram" id="telegram" placeholder="Введите Telegram">
             </div>
-            <div>
+            <div class="field">
+                <img src="./images/topic.svg" alt="иконка темы">
                 <label for="topic">Тема*</label>
                 <select name="topic" id="topic" required>
                     <option value="" disabled selected>Выберите тему</option>
@@ -28,11 +31,11 @@
                     <option value="feedback">Обратная связь</option>
                 </select>
             </div>
-            <div>
+            <div class="field">
                 <label for="comment">Комментарий</label>
                 <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
             </div>
-            <button>Отправить</button>
+            <button class="field">Отправить</button>
         </form>
     </main>
 </body>
