--- a/Miro/index.html
+++ b/Miro/index.html
@@ -59,6 +59,13 @@
                 <li>Проводите вовлекающие дизайн-воркшопы</li>
             </ul>
         </section>
+        <section class="exp">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
     </main>
     <footer>
         <div>&#169;2023 Miro</div>
