--- a/Miro/index.html
+++ b/Miro/index.html
@@ -25,34 +25,58 @@
     </header>
     <main>
         <section id="hero">
-            <h1>Место для командной работы</h1>
-            <p class="heroText">Интерактивная онлайн-доска для совместной работы команд — в любое время, в любом месте.
-            </p>
-            <form action="/register" method="get" class="heroForm">
-                <input type="email" name="email" id="email">
-                <button id="heroButton">Начать бесплатно</button>
-            </form>
-            <p>Всегда бесплатно — кредитная карта не нужна</p>
-            <img src="./images/hero1.png" alt="Изображение экрана работы Miro" id="heroImage">
+            <div>
+                <h1>
+                    Место для<br>
+                    командной<br>
+                    работы
+                </h1>
+                <p class="heroText">Интерактивная онлайн-доска для совместной работы команд — в любое время, в любом
+                    месте.
+                </p>
+                <form action="/register" method="get" class="heroForm">
+                    <input type="email" name="email" id="email">
+                    <button id="heroButton">Начать бесплатно</button>
+                </form>
+                <p>Всегда бесплатно — кредитная карта не нужна</p>
+                <div class="heroLogos">
+                    45M+ пользователей
+                    <img src="./images/logos.svg" alt="Логотипы партнёров">
+                </div>
+            </div>
+            <div>
+                <img src="./images/hero1.png" alt="Изображение экрана работы Miro" id="heroImage">
+            </div>
         </section>
-        <section>
-            <h2>Работайте вместе, где бы вы ни находились</h2>
-            <p class="sectionText">Работая в офисе, удалённо или в гибридном формате, с Miro ваша команда может
-                общаться, сотрудничать и
-                совместно
-                заниматься творчеством в одном пространстве, из любой точки мира.</p>
-            <a href="#" class="link">Узнать больше</a>
-            <img src="./images/hero2.png" alt="Работа в Miro с мобильных устройств">
+        <section class="section">
+            <div>
+                <h2>
+                    Работайте вместе,<br>
+                    где бы вы ни<br>
+                    находились
+                </h2>
+                <p class="sectionText">Работая в офисе, удалённо или в гибридном формате, с Miro ваша команда может
+                    общаться, сотрудничать и
+                    совместно
+                    заниматься творчеством в одном пространстве, из любой точки мира.</p>
+                <a href="#" class="link">Узнать больше</a>
+            </div>
+            <div>
+                <img src="./images/hero2.png" alt="Работа в Miro с мобильных устройств">
+            </div>
         </section>
-        <section>
-            <img src="./images/hero3.png" alt="Сервисы вокруг Miro">
-        </section>
-        <h2>Закройте лишние вкладки — всё уже здесь</h2>
-        <p class="sectionText">Редактируете ли вы документы в Google Docs, работаете над задачами в Jira или
-            созваниваетесь в Zoom, Miro
-            предлагает
-            более 100 интеграций с уже известными и полюбившимися вам инструментами.</p>
-        <a href="#" class="link">Узнать больше</a>
+        <section class="section section-reverse">
+            <div>
+                <h2>Закройте лишние вкладки — всё уже здесь</h2>
+                <p class="sectionText">Редактируете ли вы документы в Google Docs, работаете над задачами в Jira или
+                    созваниваетесь в Zoom, Miro
+                    предлагает
+                    более 100 интеграций с уже известными и полюбившимися вам инструментами.</p>
+                <a href="#" class="link">Узнать больше</a>
+            </div>
+            <div>
+                <img src="./images/hero3.png" alt="Сервисы вокруг Miro">
+            </div>
         </section>
         <section>
             <h2>Создан для всех типов команд</h2>
@@ -62,13 +86,10 @@
                 <li>Проводите вовлекающие дизайн-воркшопы</li>
             </ul>
         </section>
-        <section class="exp">
-            <div>DIV1</div>
-        </section>
     </main>
     <footer>
-        <div>&#169;2023 Miro</div>
         <div>
+            <div>&#169;2023 Miro</div>
             <a href="#">Условия пользования</a>
             <a href="#">Политика конфиденциальности</a>
             <a href="#">Управление файлами cookies</a>
