--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -17,6 +17,8 @@
         <div class="hero">
             <button class="button button_primary hero__button">Выбрать курс</button>
             <button class="button button_ghost hero__button">О школе</button>
+            <button class="button buttonPrimary l-row">О школе</button>
+            <button class="m-button t-button-primary l-row">О школе</button>
         </div>
     </section>
 </body>
