--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -11,6 +11,24 @@
     <link rel="stylesheet" href="./Styles/page.css">
 </head>
 
-<body></body>
+<body>
+    <header class="header">
+        <div class="header__wrapper">
+            <a href="#"><img class="header__logo" src="./images/logo.svg" alt="Логотип PurpleSchool"></a>
+            <nav>
+                <ul class="menu">
+                    <li class="menu__item menu__item_active"><a href="#">Курсы</a></li>
+                    <li class="menu__item"><a href="#">О школе</a></li>
+                    <li class="menu__item"><a href="#">Блог</a></li>
+                    <li class="menu__item"><a href="#">База знаний</a></li>
+                </ul>
+            </nav>
+            <a class="header__login">
+                <img src="./images/user.svg" alt="Иконка пользователя">
+                <div>Вход</div>
+            </a>
+        </div>
+    </header>
+</body>
 
 </html>
