--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./Styles/footer.css">
     <link rel="stylesheet" href="./Styles/header.css">
     <link rel="stylesheet" href="./Styles/page.css">
+    <link rel="stylesheet" href="./Styles/components.css">
 </head>
 
 <body>
@@ -35,6 +36,18 @@
             </button>
         </div>
     </header>
+    <section class="section section_light">
+        <div class="hero">
+            <div class="hero__left">
+                <h1 class="hero__h1">Доступные курсы по <span class="hero__h1_gradient">Разработке и DevOps</span></h1>
+                <div class="hero__cta">
+                    <button class="button button_primary">Выбрать курс</button>
+                    <button class="button button_ghost">О школе</button>
+                </div>
+            </div>
+            <img class="hero__right" src="./images/video.png" alt="Видео с автором">
+        </div>
+    </section>
 </body>
 
 </html>
