--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -39,7 +39,8 @@
     <section class="section section_light">
         <div class="hero">
             <div class="hero__left">
-                <h1 class="hero__h1">Доступные курсы по <span class="hero__h1_gradient">Разработке и DevOps</span></h1>
+                <h1 class="hero__h1">Доступные курсы по <br><span class="hero__h1_gradient">Разработке и DevOps</span>
+                </h1>
                 <div class="hero__cta">
                     <button class="button button_primary">Выбрать курс</button>
                     <button class="button button_ghost">О школе</button>
