--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Школа разработки PurpleSchool</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -27,12 +27,12 @@
                     <li class="menu__item"><a href="#">База знаний</a></li>
                 </ul>
             </nav>
-            <a class="header__login">
+            <a class="header__login" href="#" aria-label="Вход в личный кабинет">
                 <img src="./images/user.svg" alt="Иконка пользователя">
                 <div>Вход</div>
             </a>
-            <button class="header__mobile-menu-button">
-                <img src="./images/menu.svg" alt="Мгновенное меню">
+            <button class="header__mobile-menu-button" aria-expanded="false" aria-haspopup="true">
+                <img src="./images/menu.svg" alt="Мобильное меню">
             </button>
         </div>
     </header>
