--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -52,7 +52,7 @@
     <footer class="footer">
         <div class="footer__wrapper">
             <div class="footer__social">
-                <a href="#"><img class="header__logo" src="./images/logo.svg" alt="Логотип PurpleSchool"></a>
+                <a href="#"><img class="footer__logo" src="./images/logo.svg" alt="Логотип PurpleSchool"></a>
                 <div class="social-icons">
                     <a href="#" class="social-icons__icon"><img src="./images/social/youtube.svg"
                             alt="Youtube PurpleSchool"></a>
