--- a/Grid/index.html
+++ b/Grid/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <div class="wrapper">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
+        <div class="item item_1">1</div>
+        <div class="item item_2">2</div>
+        <div class="item item_3">3</div>
+        <div class="item item_4">4</div>
         <!-- <div class="item">5</div>
         <div class="item">6</div>
         <div class="item">7</div>
