--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -52,10 +52,33 @@
     <section class="section">
         <div class="section__wrapper">
             <div class="headling">
+                <div class="headling__top">Выбрать курс</div>
+                <h2 class="headling__bottom">Каталог курсов</h2>
+            </div>
+            <div class="chip_wrapper">
+                <button class="chip chip_active">Все</button>
+                <button class="chip">Frontend</button>
+                <button class="chip">Backend</button>
+                <button class="chip">DevOps</button>
+                <button class="chip">Soft Skills</button>
+            </div>
+            <div class="courses_wrapper">
+                <div class="course-card">1</div>
+                <div class="course-card">2</div>
+                <div class="course-card">3</div>
+                <div class="course-card">4</div>
+                <div class="course-card">5</div>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="section__wrapper">
+            <div class="headling">
                 <div class="headling__top">Блог и социальные сети</div>
                 <h2 class="headling__bottom">Полезные материалы</h2>
             </div>
-            <p class="paragraph paragraph_32">Каждую неделю мы публикуем новости, обновления, а так же дополнительные
+            <p class="paragraph paragraph_32">Каждую неделю мы публикуем новости, обновления, а так же
+                дополнительные
                 полезные
                 материалы в социальных
                 сетях:</p>
@@ -88,7 +111,8 @@
                             воспринимается в штыки, словно
                             это личное оскорбление. Человек всеми силами пытается сопротивляться обратной связи и не
                             готов слушать аргументы. Тут
-                            варианта два: или обратная связь дана некорректно, или человек не воспринимает критику. В
+                            варианта два: или обратная связь дана некорректно, или человек не воспринимает критику.
+                            В
                             этом посте я хочу
                             сосредоточиться на том, как работать с критикой.
                         </div>
@@ -117,7 +141,8 @@
                             воспринимается в штыки, словно
                             это личное оскорбление. Человек всеми силами пытается сопротивляться обратной связи и не
                             готов слушать аргументы. Тут
-                            варианта два: или обратная связь дана некорректно, или человек не воспринимает критику. В
+                            варианта два: или обратная связь дана некорректно, или человек не воспринимает критику.
+                            В
                             этом посте я хочу
                             сосредоточиться на том, как работать с критикой.
                         </div>
@@ -146,7 +171,8 @@
                             воспринимается в штыки, словно
                             это личное оскорбление. Человек всеми силами пытается сопротивляться обратной связи и не
                             готов слушать аргументы. Тут
-                            варианта два: или обратная связь дана некорректно, или человек не воспринимает критику. В
+                            варианта два: или обратная связь дана некорректно, или человек не воспринимает критику.
+                            В
                             этом посте я хочу
                             сосредоточиться на том, как работать с критикой.
                         </div>
