--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -63,7 +63,30 @@
                 <button class="chip">Soft Skills</button>
             </div>
             <div class="courses_wrapper">
-                <div class="course-card">1</div>
+                <div class="course-card">
+                    <div class="course-card__cover"></div>
+                    <div class="course-card__body">
+                        <div>
+                            <div class="course-card__title">React + Next.js - с нуля</div>
+                            <div class="course-card__author">Антон Ларичев</div>
+                        </div>
+                        <div class="course-card__watch">
+                            <img src="./images/Time Circle.svg" alt="Иконка часов">
+                            <div>18 часов лекций</div>
+                        </div>
+                        <div class="course-card__tags">
+                            <div class="tag">
+                                <img src="./images/Star.svg" alt="Иконка рейтинга">
+                                4.9
+                            </div>
+                            <div class="tag">Frontend</div>
+                        </div>
+                    </div>
+                    <div class="course-card__footer">
+                        <div>от 1890</div>
+                        <button class="button button_primary">Подробнее</button>
+                    </div>
+                </div>
                 <div class="course-card">2</div>
                 <div class="course-card">3</div>
                 <div class="course-card">4</div>
