--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -64,7 +64,9 @@
             </div>
             <div class="courses_wrapper">
                 <div class="course-card">
-                    <div class="course-card__cover"></div>
+                    <div class="course-card__cover">
+                        <img src="./images/cover.png" alt="Изображение курса">
+                    </div>
                     <div class="course-card__body">
                         <div>
                             <div class="course-card__title">React + Next.js - с нуля</div>
@@ -87,10 +89,110 @@
                         <button class="button button_primary">Подробнее</button>
                     </div>
                 </div>
-                <div class="course-card">2</div>
-                <div class="course-card">3</div>
-                <div class="course-card">4</div>
-                <div class="course-card">5</div>
+                <div class="course-card">
+                    <div class="course-card__cover">
+                        <img src="./images/cover.png" alt="Изображение курса">
+                    </div>
+                    <div class="course-card__body">
+                        <div>
+                            <div class="course-card__title">React + Next.js - с нуля</div>
+                            <div class="course-card__author">Антон Ларичев</div>
+                        </div>
+                        <div class="course-card__watch">
+                            <img src="./images/Time Circle.svg" alt="Иконка часов">
+                            <div>18 часов лекций</div>
+                        </div>
+                        <div class="course-card__tags">
+                            <div class="tag">
+                                <img src="./images/Star.svg" alt="Иконка рейтинга">
+                                4.9
+                            </div>
+                            <div class="tag">Frontend</div>
+                        </div>
+                    </div>
+                    <div class="course-card__footer">
+                        <div>от 1890</div>
+                        <button class="button button_primary">Подробнее</button>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <div class="course-card__cover">
+                        <img src="./images/cover.png" alt="Изображение курса">
+                    </div>
+                    <div class="course-card__body">
+                        <div>
+                            <div class="course-card__title">React + Next.js - с нуля</div>
+                            <div class="course-card__author">Антон Ларичев</div>
+                        </div>
+                        <div class="course-card__watch">
+                            <img src="./images/Time Circle.svg" alt="Иконка часов">
+                            <div>18 часов лекций</div>
+                        </div>
+                        <div class="course-card__tags">
+                            <div class="tag">
+                                <img src="./images/Star.svg" alt="Иконка рейтинга">
+                                4.9
+                            </div>
+                            <div class="tag">Frontend</div>
+                        </div>
+                    </div>
+                    <div class="course-card__footer">
+                        <div>от 1890</div>
+                        <button class="button button_primary">Подробнее</button>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <div class="course-card__cover">
+                        <img src="./images/cover.png" alt="Изображение курса">
+                    </div>
+                    <div class="course-card__body">
+                        <div>
+                            <div class="course-card__title">React + Next.js - с нуля</div>
+                            <div class="course-card__author">Антон Ларичев</div>
+                        </div>
+                        <div class="course-card__watch">
+                            <img src="./images/Time Circle.svg" alt="Иконка часов">
+                            <div>18 часов лекций</div>
+                        </div>
+                        <div class="course-card__tags">
+                            <div class="tag">
+                                <img src="./images/Star.svg" alt="Иконка рейтинга">
+                                4.9
+                            </div>
+                            <div class="tag">Frontend</div>
+                        </div>
+                    </div>
+                    <div class="course-card__footer">
+                        <div>от 1890</div>
+                        <button class="button button_primary">Подробнее</button>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <div class="course-card__cover">
+                        <img src="./images/cover.png" alt="Изображение курса">
+                    </div>
+                    <div class="course-card__body">
+                        <div>
+                            <div class="course-card__title">React + Next.js - с нуля</div>
+                            <div class="course-card__author">Антон Ларичев</div>
+                        </div>
+                        <div class="course-card__watch">
+                            <img src="./images/Time Circle.svg" alt="Иконка часов">
+                            <div>18 часов лекций</div>
+                        </div>
+                        <div class="course-card__tags">
+                            <div class="tag">
+                                <img src="./images/Star.svg" alt="Иконка рейтинга">
+                                4.9
+                            </div>
+                            <div class="tag">Frontend</div>
+                        </div>
+                    </div>
+                    <div class="course-card__footer">
+                        <div>от 1890</div>
+                        <button class="button button_primary">Подробнее</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
