--- a/PurpleSchool/index.html
+++ b/PurpleSchool/index.html
@@ -221,6 +221,19 @@
                 <div class="trust-wrapper__num">90%</div>
                 <div class="trust-wrapper__desc">студентов рекомендуют курсы</div>
             </div>
+            <h3 class="trust-wrapper__h3">Рейтинги на независимых платформах</h3>
+            <div class="card card_light card_24x32 trust-wrapper__rating" id="trust-wrapper__just">
+                <div class="trust-wrapper__rate">4.8</div>
+                <div><img src="./images/logos/coursestop.svg" alt="Логотип КурсесТоп"></div>
+            </div>
+            <div class="card card_light card_24x32 trust-wrapper__rating" id="trust-wrapper__just">
+                <div class="trust-wrapper__rate">4.8</div>
+                <div><img src="./images/logos/stepik.svg" alt="Логотип КурсесТоп"></div>
+            </div>
+            <div class="card card_light card_24x32 trust-wrapper__rating" id="trust-wrapper__just">
+                <div class="trust-wrapper__rate">4.7</div>
+                <div><img src="./images/logos/udemy.svg" alt="Логотип КурсесТоп"></div>
+            </div>
         </div>
     </section>
     <section class="section">
